src/test/resources/compiler/parser/input/pass/pos_neg.rule
-> +pos -net action1 (0 <= a <= 1: 1) 1.