src/test/resources/compiler/parser/input/fail/other_letter_used.rule
pre -> +post1 +post2 action (0 <= x <= 1: 1).